# SQLRanges

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  SQLRanges.html  __init__.py  pyproject.toml  sqlite3_queries.py  sqlite3_utils.py
.github/workflows/: docs.yml  gh-pages.yml  test.yml
SQLRanges/: __init__.py  duckdb_queries.py  duckdb_utils.py  queries.py  simple.py  utils.py
docs/source/: SQLRanges.rst  conf.py  index.rst
source/: SQLRanges.rst  conf.py  index.rst  modules.rst  sqlranges.rst
sqlranges/: __init__.py  queries.py  utils.py
sqlranges/tests/: test_sqlranges.py
tests/: test_sqlranges.py
tests/expected_outputs/: exon_counts_mouse.csv  overlapping_genes_mouse.csv  total_exon_length_mouse.csv
