[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlranges"
version = "0.1.0"
description = "SQL-backed genomic intervals operations with SQLite and DuckDB"
readme = "README.md"
authors = [
    { name="Dhananjay Raman", email="draman9224@gmail.com" },
    { name="Saket Choudhary", email="saketc@iitb.ac.in" }
]
dependencies = [
    "pandas",
    "ray",
    "duckdb",
    "pyranges"
]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Homepage = "https://github.com/DhanoHacks/sqlranges"

[tool.setuptools.packages.find]
where = ["."]